// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlotlyChart Should attach events when the container is attached. 1`] = `
<PlotlyChartClass
  config={
    Object {
      "displayModeBar": false,
    }
  }
  data={
    Array [
      Object {
        "marker": Object {
          "color": "blue",
        },
        "mode": "markers",
        "type": "pointcloud",
        "uid": "adam",
        "xy": Float32Array [
          1,
          2,
          3,
          4,
        ],
      },
    ]
  }
  layout={
    Object {
      "autosize": true,
      "height": 400,
      "legend": Object {},
      "margin": Object {
        "b": 80,
        "l": 40,
        "r": 40,
        "t": 10,
      },
      "showlegend": false,
      "title": "",
      "width": 400,
      "xaxis": Object {
        "range": Array [
          30,
        ],
      },
      "yaxis": Object {
        "range": Array [
          30,
        ],
      },
    }
  }
  onClickCallback={[MockFunction]}
  onSelectedCallback={[MockFunction]}
>
  <div
    className="plotly-chart"
  />
</PlotlyChartClass>
`;

exports[`PlotlyChart Should match existing snapshot when given empty data. 1`] = `
<PlotlyChartClass
  config={
    Object {
      "displayModeBar": false,
    }
  }
  data={Array []}
  layout={
    Object {
      "autosize": true,
      "height": 400,
      "legend": Object {},
      "margin": Object {
        "b": 80,
        "l": 40,
        "r": 40,
        "t": 10,
      },
      "showlegend": false,
      "title": "",
      "width": 400,
      "xaxis": Object {
        "range": Array [
          30,
        ],
      },
      "yaxis": Object {
        "range": Array [
          30,
        ],
      },
    }
  }
>
  <div
    className="plotly-chart"
  />
</PlotlyChartClass>
`;

exports[`PlotlyChart Should match existing snapshot when given sample data. 1`] = `
<PlotlyChartClass
  config={
    Object {
      "displayModeBar": false,
    }
  }
  data={
    Array [
      Object {
        "marker": Object {
          "color": "blue",
        },
        "mode": "markers",
        "type": "pointcloud",
        "uid": "adam",
        "xy": Float32Array [
          1,
          2,
          3,
          4,
        ],
      },
    ]
  }
  layout={
    Object {
      "autosize": true,
      "height": 400,
      "legend": Object {},
      "margin": Object {
        "b": 80,
        "l": 40,
        "r": 40,
        "t": 10,
      },
      "showlegend": false,
      "title": "",
      "width": 400,
      "xaxis": Object {
        "range": Array [
          30,
        ],
      },
      "yaxis": Object {
        "range": Array [
          30,
        ],
      },
    }
  }
>
  <div
    className="plotly-chart"
  />
</PlotlyChartClass>
`;
